# Sec-Chat

./: .env  .gitignore  README.md  app.py  app_.py  pyproject.toml  requirements.txt  sender.py
keys/: gendu_priv.pem  gendu_pub.pem  loda_priv.pem  loda_pub.pem  paras_priv.pem  paras_pub.pem  raj_priv.pem  raj_pub.pem  ris_priv.pem  ris_pub.pem  test_priv.pem  test_pub.pem
modules/: enc_dec.py  pymongo_sync.py
templates/: auth.html  chat.html  login.html  profile.html  register.html
